--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-The hearing-impaired are not familiar with the way words are spoken because they do not know how different words sound like. One way to help the hearing-impaired is through speech training systems which teaches them how to speak. The proponents will create a speech training software that provides visual scalar feedback in order for the hearing-impaired to adjust to speaking different sounds. The speech training software will be limited to supporting only vowel sounds.
+People with hearing-impairment's inability to properly hear sounds affects their development in verbal communication, even though their vocal chords are properly functioning. Speech training is provided by institutions and specialized centres for the hearing-impaired. However, existing speech training systems are lacking in providing comprehensible visual feedback, wherein the trainee may measure how near or how far he is from the target pronunciation. This leaves the trainee having to guess on how to correct his mistakes. This research aims to explore and design an effective visual feedback method for speech training. The speech feedback system will explore on creating a measurable kind of feedback focusing on teaching a fixed set of consonant-diphthong combinations.
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
