--- a/appendix_C.tex
+++ b/appendix_C.tex
@@ -25,7 +25,7 @@
 %
 \newcommand{\resperson}[4]{\textbf{#1} \\ #2 \\ #3 \\ \url{#4}\vspace{0.5em}\\}
 
-\resperson{Dr. Firstname1 Lastname1}{Adviser}{College of Computer Studies\\De La Salle University-Manila}{emailaddr@dlsu.edu.ph}
-\resperson{Mr. Firstname2 Lastname2}{Role2}{Affiliation2}{emailaddr2@domain.com}
+\resperson{Mr. Aldrin Caberio}{107 Jack Garden, Marulas, Valenzuela City}{+639166476885}{aldrin_caberio@dlsu.edu.ph}
+\resperson{Mr. Lelis Vincent Cruz}{}{}{}
 \resperson{Ms. Firstname3 Lastname3}{Role3}{Affiliation3}{emailaddr3@domain.net}
-
+\resperson{Mr. David Nicholai Lim}{22 Tunisia Street, Better Living Subdivision, Paranaque City}{+639066446209}{david_lim@dlsu.edu.ph}
