--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -6,61 +6,142 @@ This chapter discusses the overview of the current state of technology, research
 \section{Overview of the Current State of Technology}
 \label{sec:overview}
 
-Hearing impairment is the inability to hear, and it may affect one’s development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. An extremely deaf child may find it immensely difficult to learn speech and language since they cannot imitate any sounds without auditory feedback \cite{bernstein:1988:STA}. This leads to children not being able to use their vocal chords even though it is properly functioning.
+Hearing-impairment is the inability to hear, and it affects one's development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment while others may obtain it due to age, illness, trauma, and other factors. Dr. Matkin stated that hearing loss has a grave impact on a child's early development on his or her language, cognition, and social-emotional competence \citeyear{matkin:1999:cechl}. The impact of hearing loss is correlated with the level of hearing loss. There are generally four levels of hearing loss--mild, moderate, severe, and profound \cite{dh:1964:lohl}. A child with hearing loss, especially a profoundly deaf child, one who cannot hear at all, may find it immensely difficult to learn speech and language since they cannot imitate any sounds without auditory feedback \cite{bernstein:1988:STA}. This leads to children not being able to use their vocal chords even though they are  properly functioning. Therefore, speech training systems are developed in order for them to use their vocal chords despite having the inability to hear.
 
+Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. People with hearing-impairment have damage hair cells or less hair cells which makes the cochlea unable to detect the vibrations as it has been received. Cochlear implants stimulate the cochlear nerves without requiring to pass through the hair cells. A person with a cochlear implant may still need to undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person is able to hear effectively, it can lead to speech training and therapy in order for one to respond accordingly to different sounds. However, a cochlear implant is very costly, ranging from a minimum price of P663,742.50 (\$15,000) to a maximum price of P884,985.51 (\$20,000) \cite{garcia:2015:dtfd}. Thus another solution was implemented to provide an affordable and economical alternative---the speech training system. 
+
+% COMMENT
 \begin{comment}
-Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
+Throughout the years, man has tried to find ways to help the hearing-impaired learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-impared were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
 
 One problem of a hearing-impaired student is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
 \end{comment}
+% END OF COMMENT
 
-Early speech training software were implemented using a lip reading technique, wherein the systems take the user’s lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
+Speech training systems started during the 19th century. Early speech training systems were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. The input will then be processed and evaluated by the system with its corresponding phoneme's lip movement. However, numerous phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes being not distinguishable through visual data alone \cite{heracleous:2010:CSA}.
+Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children by gamifying the learning process. One is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing two-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}. The problem with these games is that they leave the child guessing on whether they are actually doing it right or wrong. There is no specific feedback on how to produce the right sound correctly.
 
-Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a ’ball game’ wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child’s voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}. The problem with this game is that it only leaves the children to guess on whether he is actually doing right or wrong. There is no specific feedback on how to produce the right sound correctly.
+Based on a book written by Susan M. Brookhart \citeyear{brookhart:2008:gef}, feedback varies in certain strategies and these strategies varies in how it is presented. Computer-based speech therapy systems that have been implemented are mostly product-oriented, providing an analysis of the input of the user and the final result. These systems' feedback strategy is modal, specifically visual strategy; however, Brookhart also mentioned that a good feedback in this kind of strategy is a demonstration of how the task should be done \cite{brookhart:2008:gef}. The method does not provide the information of how the sound should be articulated. Furthermore, it does not give comparison to the target or to the previous input of the student which makes it in contrast to giving good feedback in terms of content \cite{brookhart:2008:gef}. The shortcoming of these systems are brought upon by giving visual representations in real time (e.g. game-like visualizations and speech pictures) \cite{oster:2006:cbs}.
 
-Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells, or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with a cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
-					
-Computer-based speech therapy systems that have been implemented are mostly product-oriented, providing an analysis of the input of the user and the final result. The method, however, does not provide the information of how the sound should be articulated. The shortcoming of these systems are brought upon by giving visual representations in real time i.e. game-like visualizations and speech pictures \cite{oster:2006:cbs}.
-									
-Moreover, in training hearing-impaired children, the most preferred feedback is through visual modality. This allows the children see the motor gestures that were non-visible, assisting them in developing their speech gestures. The problem that this method posed was that it was seldom evaluated in a pedagogical programme. Often, the visual aids presented was difficult to understand, unnatural, delayed, unattractive, and had no motivational impact on the children \cite{oster:2006:cbs}.
-				
+Moreover, in training hearing-impaired children, the most preferred feedback is through visual modality while being interactive with the child using it and also providing demonstration on how it should be articulated \cite{brookhart:2008:gef}. This allows the children see the motor gestures that were non-visible, assisting them in developing their speech gestures. The problem that this method posed was that it was seldom evaluated in a pedagogical programme. Often, the visual aids presented was difficult to understand, unnatural, delayed, unattractive, and had no motivational impact on the children \cite{oster:2006:cbs}.
+
 \section{Research Objectives}
 \label{sec:researchobjectives}
 
 \subsection{General Objective}
 \label{sec:generalobjective}
-
-\begin{comment}
-To implement a speech training software that provides visual feedback to assist people with hearing impairment in order to learn how to speak vowel sounds.
-\end{comment}
-
-To implement a feedback system that provides scalar visual feedback by means of colour representation.
+To implement a feedback system for speech training that provides measurable visual feedback.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
 \begin{enumerate}
-\item To find schools for the hearing-impaired who may assist the group with the testing and implementation of the research.
-\item To identify and compare different methods and design of visual feedback in speech training systems.
-\item To select the optimal colour representation to be used as visual scalar feedback.
-\item To select the optimal visual feedback method based on usability and effectiveness
-\item To evaluate the accuracy of the implemented speech training software’s visual feedback.
-\item To evaluate the effectiveness of the implemented speech training software
+\item To understand how feedback mechanisms of existing speech training software can be used to improve the implemented system
+\item To design a system that trains hearing-impaired children in speaking consonant-diphthong combinations through visual feedback
+\item To implement a system that recognizes different phonetic sounds from an audio clip that utters a phoneme sound
+\item To identify and compare different methods and design of visual feedback in speech training systems
+\item To evaluate the accuracy of the implemented system's model
+\item To evaluate the effectiveness of the implemented speech feedback system
 \end{enumerate}
 
 \section{Scope and Limitations of the Research}
 \label{sec:scopelimitations}
 
-For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation---the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
-The speech training software will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
-The speech training software will run on a desktop platform, as desktop computers are accessible and widely-used.
-The proponents will review only speech training software with free trials.
-The feedback system will only cater to vowel sounds, as the mapping software to be used only serves vowel sounds.
+The research will strictly focus on feedback mechanisms. Motivating or having the users be engaged into using the system will not be considered as the research will be focusing on providing visual feedback.
+
+The research will cater to only having consonant-diphthong combinations in the system as these are considered to be stepping stones for Deaf students into forming actual words.
+
+The feedback system will only process WAV audio clips with the user saying consonant-diphthong combinations as input into the feedback system. Components of the GUI such as the video playback and web camera display will only be used as additional aid to the user. The feedback to be displayed to the trainee will only be visual, meaning the feedback will not be discerned by senses other than sight.
+
+For the implementation of the feedback system, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's research is a mapping prototype using Self-Organizing Maps (SOMs) which encodes a voice recording into coefficients and distinguishes which vowel a user had spoken. Agustin's thesis will be used for the system to distinguish which consonant-diphthong combination the trainee had spoken. The speech feedback system will cater to a fixed set of consonant-diphthong combinations, considering the diphthongs that the prototype can detect and the top three consonants ('T', 'N', and 'S') as mentioned by Robert Lewand \citeyear{lewand:2000:crymath}. The speech feedback system will run on a desktop or a laptop machine, as these are accessible and widely-used. 
+
+%SCOPE OF PHONEMES WE WILL CONSIDER
 
 \section{Significance of the Research}
 \label{sec:significance}
 
-The thesis will assist the Deaf in learning the pronunciations of vowel sounds correctly. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
-The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
+The thesis will assist the Deaf in learning the pronunciations of consonant-diphthong combinations. Current speech training software in the industry only show graphical illustrations of the user's voice input and the goal in which the user must achieve. This method however lacks in providing scalar feedback of the input of the user. The thesis will be providing feedback as to how the trainee can correctly pronounce consonant-diphthong combinations by displaying how far or how near they are from the correct pronunciation.
 
-The thesis will assist the Deaf in learning the pronunciations of vowel sounds accurately. Current speech training software in the industry only shows a graphical illustration of the user's voice input and the goal the user must achieve. This method however lacks in providing scalar feedback of the input of the user. The thesis will be providing a feedback on what sound is the user currently producing and what he/she needs to do in order to correct himself/herself. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training. The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
+Deaf schools may make use of the system as a teaching and evaluation tool for their students.
+
+The thesis may serve as a basis for future implementations of speech training software which may cater not only consonant-diphthong combinations, but with a bigger set of training data.
+
+\section{Research Methodology}
+\label{sec:methodology}
+
+\subsection{Research Activities}
+The research activities will be divided into the following phases:
+\begin{enumerate}
+\item Gathering of Data
+\item Research and Comparison
+\item Implementation of the Software
+\item Testing and Evaluation of the Software
+\end{enumerate}
+
+\subsubsection{Gathering of Data}
+The appropriate literature---scalar feedback, visual appeal, speech training systems---are to be gathered in order to design and implement an effective speech feedback system. Several textbooks and journals are available in the institution where the proponents are studying in. The proponents also have to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech feedback system. Deaf schools that are accessible in terms of distance are College of St. Benilde - School of Deaf Education and Applied Studies, and Philippine Institute for the Deaf. On the first interview, if the school had agreed to help the researchers, the age range of the testers (hearing-impaired) will be asked. Also, if available, their available schedules for usability testing and software evaluation (effectiveness of the feedback system). Their current speech training methods are to be asked as well during the interview in order for the researchers to know how they can improve the software.
+
+\subsubsection{Research and Comparison}
+After having gathered data, the group is then tasked to research and compare different literatures and ideas. There are several ways of providing visual and scalar feedback to users. However, the group should only select the more effective ways of providing visual and scalar feedback. With this, it is important to look behind the science of these visual feedback and how effective they are.
+
+There are several speech training software created by different companies. IBM, for one, created SpeechViewer which is used by speech therapists to train those with hearing-impairment. The software provides a feature wherein the therapist can record training sessions in order to see the improvements of their patients. Though the software may be outdated, it may serve as a reference on how a speech training process works. Viewing other speech training software may help the thesis group in gathering ideas in order to create an effective feedback system.
+
+\subsubsection{Implementation of the Software}
+The feedback system must be effective and easy to use. The mapping software of Natalie Agustin \citeyear{agustin:2014:SOM} will be integrated into the speech feedback system in order for the voice input, which the proponents will implement, to be recognized and provide the corresponding mapping which determines the consonant-diphthong combination that was spoken by the user. Implementation will be performed in approximately 16 weeks. The proponents will also conduct interviews with Deaf schools to demonstrate the prototype and test the software's effectiveness. 11 weeks will be spent for improving the software such that the feedback displayed is comprehensible.
+
+\subsubsection{Testing and Evaluation of the Software}
+To determine how effective the implemented software is, the researchers are going to have the program tested by the hearing-impaired, guided by their speech trainers. The researchers would like to know if the software is good in terms of usability, effectivity, and comprehension. This way, the researchers will know how to further improve the software. 11 weeks will be spent for testing and evaluation. The proponents will be heading to Deaf schools who have agreed to help them with this research. If the feedback system is lacking, the researchers will have to improve on it and head back to the schools to test the improved system. The metric for measuring the effectiveness and comprehensiveness of the feedback system will be determined by the researchers after conducting the initial interview with the Deaf schools.
+
+\pagebreak
+\begin{landscape}
+\subsection{Calendar of Activities}
+
+
+%Table \ref{tab:timetableactivities} shows a Gantt chart of the activities. Each bullet represents approximately one week worth of activity.
+Table 3.1 shows a Gantt chart of the activities. Each bullet represents approximately one week worth of activity.
+
+%
+%  the following commands will be used for filling up the bullets in the Gantt chart
+%
+\newcommand{\weekone}{\textbullet}
+\newcommand{\weektwo}{\textbullet \textbullet}
+\newcommand{\weekthree}{\textbullet \textbullet \textbullet}
+\newcommand{\weekfour}{\textbullet \textbullet \textbullet \textbullet}
+
+%
+%  alternative to bullet is a star 
+%
+\begin{comment}
+   \newcommand{\weekone}{$\star$}
+   \newcommand{\weektwo}{$\star \star$}
+   \newcommand{\weekthree}{$\star \star \star$}
+   \newcommand{\weekfour}{$\star \star \star \star$ }
+\end{comment}
+
+
+
+\begin{table}[ht]   %t means place on top, replace with b if you want to place at the bottom
+\centering
+\caption{Timetable of Activities} \vspace{0.25em}
+\begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|} \hline
+\centering Activities (2015)				& Mar		&Apr		& May		& Jun		& Jul		& Aug		& Sep		& Oct		& Nov		& Dec			\\ \hline
+Gathering of Data							& \weekfour &\weektwo~~~&~\weekthree&			& \weekone	&			&			&			&			&				\\ \hline
+Research and Comparison						& \weekfour &\weektwo~~~&~\weekthree&			&			&			&			&			&			&				\\ \hline
+Implementation of the Software				&			&			&			& 			& 			& \weekfour & \weekfour & \weekfour	& \weekfour	&\weekone~~~~~	\\ \hline
+Documentation								& \weekfour &\weektwo~~~&~\weekthree& 			&			&			& \weekfour & \weekfour	& \weekfour	&\weekone~~~~~	\\ \hline
+\end{tabular}
+\label{tab:timetableactivities2015}
+\end{table}
+
+\begin{table}[ht]   %t means place on top, replace with b if you want to place at the bottom
+\centering
+\caption{Timetable of Activities} \vspace{0.25em}
+\begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|} \hline
+\centering Activities (2016)				& Jan		& Feb		& Mar		& Apr		 & May		 & Jun		& Jul		& Aug		\\ \hline
+Testing and Evaluation of the Software		&~~~\weektwo& \weekfour &\weekthree~~&\weektwo~~~&~\weektwo~~& \weekfour & \weekfour&~~~\weektwo\\ \hline
+Documentation								&~~~\weektwo& \weekfour &\weekthree~~&\weektwo~~~&~\weektwo~~& \weekfour & \weekfour &~~~\weektwo\\ \hline
+\end{tabular}
+\label{tab:timetableactivities2016}
+\end{table}
+
+\end{landscape}
