--- a/main.tex
+++ b/main.tex
@@ -56,9 +56,10 @@
 \include{chapter_2}               %-- includes LaTeX source file for Chapter 1: Research Description
                                   %-- your job: **EDIT THIS FILE** to indicate your own research description
 \include{chapter_3}
+\include{chapter_4}
 
 
-\bibliography{ourreferences}       %-- the file "myreferences.bib" is a sample bibliography (bib) from SIGGRAPH 
+\bibliography{references}       %-- the file "myreferences.bib" is a sample bibliography (bib) from SIGGRAPH 
                                   %-- your job: **CREATE/EDIT** your own bibliography file  
 
 \end{document}
